# goit-ds-hw-01

./: Dockerfile  README  main.py  pyproject.toml
