[tool.poetry]
name = "phone-helper"
version = "0.1.0"
description = "save your contacts"
authors = ["Viktor <asgardcasting@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
